# gh-activity-summarizer

./: Makefile  README.md  cli.py  pyproject.toml
cli/: github.py  llm.py  summarizer.py
src/gh_activity_summarizer/: config.py  github.py  usecases.py
src/gh_activity_summarizer/cli/: github.py
src/gh_activity_summarizer/interfaces/: claude.py  github.py
