[tool.poetry]
name = "gh-activity-summarizer"
version = "0.1.0"
description = ""
authors = ["c-kamia <c.kamia@cartahd.com>"]
readme = "README.md"
packages = [{include = "gh_activity_summarizer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
