[project]
name = "gh-activity-summarizer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "jinja2 == 3.1.3",
    "langchain == 0.1.16",
    "langchain-anthropic == 0.1.8",
    "python-dotenv == 1.0.1",
    "requests == 2.31.0",]

[project.optional-dependencies]
dev = [
    "ruff == 0.3.7",
    "mypy == 1.9.0",
    "types-requests == 2.31.0.20240406",]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["SIM108"]